--- a/index.ipynb
+++ b/index.ipynb
@@ -201,6 +201,7 @@
    "outputs": [],
    "source": [
     "def restaurant_name(restaurant):\n",
+    "    return fork\n",
     "    pass"
    ]
   },
