--- a/index.ipynb
+++ b/index.ipynb
@@ -202,6 +202,7 @@
    "source": [
     "def restaurant_name(restaurant):\n",
     "    name = restaurant[8]\n",
+    "    return name\n",
     "    "
    ]
   },
