--- a/index.ipynb
+++ b/index.ipynb
@@ -196,12 +196,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "def restaurant_name(restaurant):\n",
-    "    name = restaurant[8].\n",
+    "    name = restaurant['name']\n",
     "    return name\n",
     "    "
    ]
