--- a/index.ipynb
+++ b/index.ipynb
@@ -241,7 +241,7 @@
    "outputs": [],
    "source": [
     "def restaurant_rating(restaurant):\n",
-    "    return restau"
+    "    return restaurant['rating']"
    ]
   },
   {
