--- a/index.ipynb
+++ b/index.ipynb
@@ -305,7 +305,7 @@
    "outputs": [],
    "source": [
     "def is_better(restaurant, alternative):\n",
-    "    if alternative >= restaurant['rating']"
+    "    if alternative[] >= restaurant['rating']"
    ]
   },
   {
