--- a/index.ipynb
+++ b/index.ipynb
@@ -305,7 +305,8 @@
    "outputs": [],
    "source": [
     "def is_better(restaurant, alternative):\n",
-    "    if alternative[] >= restaurant['rating']"
+    "    if alternative['rating'] >= restaurant['rating']:\n",
+    "        "
    ]
   },
   {
