Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -306,7 +306,8 @@
    "source": [
     "def is_better(restaurant, alternative):\n",
     "    if alternative['rating'] >= restaurant['rating']:\n",
-    "        "
+    "        return False\n",
+    "    else"
    ]
   },
   {
