--- a/index.ipynb
+++ b/index.ipynb
@@ -472,7 +472,7 @@
    "outputs": [],
    "source": [
     "def high_rating(restaurant, rating):\n",
-    "    if int(restaurant['rating']) "
+    "    if int(restaurant['rating']) >= "
    ]
   },
   {
