--- a/index.ipynb
+++ b/index.ipynb
@@ -473,7 +473,8 @@
    "source": [
     "def high_rating(restaurant, rating):\n",
     "    if int(restaurant['rating']) >= rating:\n",
-    "        return True"
+    "        return True\n",
+    "    elk"
    ]
   },
   {
@@ -507,9 +508,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "high_rating(frontier_restaurant, 4) # True"
    ]
