Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -467,14 +467,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-31-71ef10b3cd55>, line 5)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-31-71ef10b3cd55>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    reutrn False\u001b[0m\n\u001b[0m               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def high_rating(restaurant, rating):\n",
     "    if int(restaurant['rating']) >= rating:\n",
     "        return True\n",
-    "    elk"
+    "    else:\n",
+    "        reutrn False"
    ]
   },
   {
